--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,5 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: ls
-    - run: cd client/
-    - run: ls
-    - run: npm run build
+    - run: npm run build --prefix client
     - run: pm2 restart 0
