--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: ls
+    - run: npm install --prefix client
+    - run: npm install --prefix server
     - run: npm run build --prefix client
     - run: pm2 restart 0
