--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,8 +25,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: ls
-    - run: npm install --prefix client
-    - run: npm install --prefix server
-    - run: npm run build --prefix client
+    - run: 
+        npm install
+        cd client
+        npm install
+        npm run build
     - run: pm2 restart 0
