--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,9 +25,11 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
+           working-derectory: ./
     - run: 
         npm install
         cd client
         npm install
         npm run build
+        working-directory: ./
     - run: pm2 restart 0
