--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,7 +12,7 @@ jobs:
 
     runs-on: self-hosted
     env:
-      working-directory: ./
+      working-directory: /home/ubuntu/apps/html_app/
 
     defaults:
       run:
