--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,11 +25,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: ls
-    - run: pwd
-    - run:
-        npm install
-        cd client
-        npm install
-        npm run build
+    - run: npm install
+    - run: npm install --prefix server
+    - run: npm install --prefix client
+    - run: npm run build --prefix client
     - run: pm2 restart 0
