--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,11 +26,11 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm install
-    - run: npm install --prefix server
-    - run: |
-           cd client  
-           npm install    
-    - run: |
-           cd client  
-           npm run build
+    - name: Server
+    - working-directory: ./server
+    - run: npm install
+    - name: Client
+    - working-directory: ./client
+    - run: npm install    
+    - run: npm run build
     - run: pm2 restart 0
