--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,13 +24,13 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm install
+      run: npm ci
+      run: npm install
     - name: Server
-    - working-directory: ./server
-    - run: npm install
+      working-directory: ./server
+      run: npm install
     - name: Client
-    - working-directory: ./client
-    - run: npm install    
-    - run: npm run build
-    - run: pm2 restart 0
+      working-directory: ./client
+      run: npm install    
+      run: npm run build
+      run: pm2 restart 0
