--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,13 +25,13 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Install dependencies
-      run: npm ci
-      run: npm install
+    - run: npm ci
+    - run: npm install
     - name: Server
       working-directory: ./server
       run: npm install
     - name: Client
       working-directory: ./client
-      run: npm install    
-      run: npm run build
-      run: pm2 restart 0
+    - run: npm install    
+    - run: npm run build
+    - run: pm2 restart 0
