--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,4 +34,12 @@ jobs:
     - run: npm ci
     - run: npm install
       working-directory: ./server
+    - name: Client
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm ci
+    - run: npm install
+      working-directory: ./client
 
