--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,6 @@ jobs:
         cd client
         npm install
     - run:
-        cd client
+        cd client &&
         npm build
     - run: pm2 restart 0
