--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,10 +25,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: 
-        cd client &&
-        npm install
-    - run:
-        cd client &&
-        npm run build
+    - run: npm install
+    - run: npm run dobre
+    - run: npm run production
     - run: pm2 restart 0
