--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "html_app_deploy_test": "file:..",
     "iframe-resizer-react": "^1.1.0",
     "lottie-react": "^2.3.1",
     "react": "^18.2.0",
