--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm install
-    - run: npm pwd
+    - run: pwd
     - run: pm2 stop
     - run: npm install --prefix server
     - run: pm2 restart 0
