--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,6 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: pwd
-    - run: pm2 stop
+    - run: pm2 stop 0
     - run: npm install --prefix server
     - run: pm2 restart 0
