--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,26 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: pwd
-    - run: pm2 stop 0
+    - run: pm2 stop 0 
     - run: npm install --prefix server
+    - run: pm2 restart 0
+
+  client:
+
+    runs-on: self-hosted
+    defaults:
+      run:
+        working-directory: ./client
+      # When application is successfully tested and build has been generated
+      # Then we can start with deployment
+    needs: server
+    steps:
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm
+    - run: npm install
+    - run: npm pwd
+    - run: pm2 stop
     - run: pm2 restart 0
