--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,27 +8,27 @@ on:
     branches: [ "main" ]
 
 jobs:
-  server:
+  # server:
 
-    runs-on: self-hosted
+  #   runs-on: self-hosted
 
-    strategy:
-      matrix:
-        node-version: [18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+  #   strategy:
+  #     matrix:
+  #       node-version: [18.x]
+  #       # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
-    steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm install
-    - run: pwd
-    - run: pm2 stop 0 
-    - run: npm install --prefix server
-    - run: pm2 restart 0
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #   - name: Use Node.js ${{ matrix.node-version }}
+  #     uses: actions/setup-node@v3
+  #     with:
+  #       node-version: ${{ matrix.node-version }}
+  #       cache: 'npm'
+  #   - run: npm install
+  #   - run: pwd
+  #   - run: pm2 stop 0 
+  #   - run: npm install --prefix server
+  #   - run: pm2 restart 0
 
   client:
 
@@ -45,7 +45,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm install
-    - run: npm pwd
+    # - run: npm install
+    - run: pwd
     - run: pm2 stop
     - run: pm2 restart 0
