--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,7 +45,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    # - run: npm install
-    - run: pwd
     - run: pm2 stop
+    - run: npm install
     - run: pm2 restart 0
