--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,6 +45,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: pm2 stop
+    - run: pm2 stop 0
     - run: npm install
     - run: pm2 restart 0
