--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -47,5 +47,5 @@ jobs:
         cache: 'npm'
     - run: pm2 stop 0
     - run: npm install
-    - run: npm build
+    - run: npm run build
     - run: pm2 restart 0
