--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -46,6 +46,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: pm2 stop 0
-    - run: npm install
+    - run: npm ci
     - run: npm run build
     - run: pm2 restart 0
