--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "npm start --prefix server",
     "client": "npm start --prefix client",
-    "dobre": "concurrently \"npm install --prefix server\" \"npm install --prefix client\"",
+    "build": "concurrently \"npm install --prefix server\" \"npm install --prefix client\"",
     "production": "npm run build --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
