--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,15 @@
     "dependencies": {
         "aws-sdk": "^2.1209.0",
         "axios": "^1.2.1",
+        "bcrypt": "^5.1.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "ejs": "^3.1.8",
         "express": "^4.18.1",
+        "jsonwebtoken": "^8.5.1",
         "memfs": "^3.4.7",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "node-cron": "^3.0.2",
         "nodemon": "^2.0.19",
         "pg": "^8.7.3",
