--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@codemirror/lang-html": "^6.4.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/codemirror-theme-dracula": "^4.19.9",
+    "@uiw/react-codemirror": "^4.19.9",
     "axios": "^0.27.2",
     "html_app_deploy_test": "file:..",
     "iframe-resizer-react": "^1.1.0",
