--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,7 @@
         "node": "18.x"
     },
     "scripts": {
-        "start": "node server.js",
-        "start-dev": "nodemon server.js"
+        "start": "nodemon server.js"
     },
     "keywords": [],
     "author": "",
