--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
         "pg": "^8.7.3",
         "puppeteer": "^16.2.0",
         "puppeteer-core": "^21.4.0",
+        "sharp": "^0.32.6",
         "ssh2-sftp-client": "^9.0.4"
     }
 }
